# stackparam

./: .gitignore  Cargo.toml  README.md  build-helper-class.rs
javalib/: build.gradle  settings.gradle
javalib/agent-tests/src/test/java/stackparam/: HelloWorldTest.java  StackParamNativeTest.java  ThrowableTest.java
javalib/gradle/wrapper/: gradle-wrapper.properties
javalib/native/src/main/java/stackparam/: StackParamNative.java
javalib/native/src/test/java/stackparam/: StackParamNativeTest.java
javalib/ow2-manip/src/main/java/stackparam/: Ow2AsmManip.java
javalib/ow2-manip/src/test/java/stackparam/: Ow2AsmManipTest.java
javalib/src/test/java/stackparam/: HelloWorldTest.java
src/: lib.rs  manip.rs  native.rs  util.rs
src/bytecode/: README.md  classfile.rs  mod.rs
src/bytecode/io/: mod.rs  reader.rs  writer.rs
src/jvmti_sys/: mod.rs
tests/: bytecode_tests.rs  external_java_tests.rs  simple.rs
